2002-11-22  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03456] tiling of tab
	* display.c (displayBuffer): use LastTab->y
		(redrawNLine): fix column calculation
	* fm.h (TabBuffer): add x1, x2, y
	* main.c (calcTabPos): added
		(main): calcTabPos()
		(mouse_scroll_line): rewrite
		(process_mouse): use LastTab->y
		(_newT): calcTabPos()
		(calcTabPos): added
		(deleteTab): calcTabPos()
		(moveTab): calcTabPos()

2002-11-22  Fumitoshi UKAI  <ukai@debian.or.jp>

	* doc/README.mouse_menu: added
	* doc-jp/README.mouse_menu: added

2002-11-22  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03455] mouse menu
	* configure (config.h): MOUSE_FILE
	* display.c (displayBuffer): nTab -> nTab2, N_TAB -> nTabLine()
		(redrawNLine): nTab -> nTab2, N_TAB -> nTabLine()
				mouse_menu support
	* fm.h (nTab2): added
		(N_TAB): deleted
		(NO_TABBUFFER): added
		(struct _MouseMenu): added
		(mouse_menu_map): added
		(mouse_menu): added
	* func.c (initMouseMenu): added
	* main.c (main): initMouseMenu()
		(posTab): mouse_menu support
		(mouse_menu_action): added
		(process_mouse): mouse_menu support
		(reinit): initMouseMenu()
		(nTabLine): added
		(moveTab): check NO_TABBUFFER
	* proto.h (nTabLine): added
		(initMouseMenu): added
	* rc.c (sync_with_option): initMouseMenu()

2002-11-22  Fumitoshi UKAI  <ukai@debian.or.jp>

	* NEWS: func: NEXT, PREV

2002-11-22  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03454] next / previous buffer
	* funcname.tab (NEXT): added
			(PREV): added
	* main.c (nextBf): added
		(prevBf): added
	* proto.h (nextBf): added
		(prevBf): added
	* doc/README.func (NEXT): added
			(PREV): added
	* doc-jp/README.func (NEXT): added
			(PREV): added
	* scripts/w3mhelp.cgi.in (Buffer operation): nextBf prevBf

2002-11-20  Fumitoshi UKAI  <ukai@debian.or.jp>

	* NEWS: rc: image_map_list

2002-11-20  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03452] image map
	* display.c (displayBuffer): use getCurrentMapLabel()